--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "subtree"]
-	path = subtree
+[submodule "subtree-practice-sub"]
+	path = subtree-practice-sub
 	url = https://github.com/yk-mt12/subtree-practice-sub
